--- a/src/test/resources/general.properties
+++ b/src/test/resources/general.properties
@@ -1,11 +1,11 @@
-# target execution: local or remote
+# target execution: local, local-suite, selenium-grid, testcontainers
 target = local
 
 # browser to use : chrome, firefox, edge, safari
-browser = chrome
+browser = firefox
 
 # run test into headless mode
-headless = false
+headless = true
 
 # initial URL
 url.base = http://www.eliasnogueira.com/
