--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,16 @@
 
 	<properties>
 
+		<selenium.version>4.16.1</selenium.version>
+		<testng.version>7.0.0</testng.version>
+		<owner.version>1.0.12</owner.version>
 		<log4j.version>2.22.1</log4j.version>
 		<testcontainers.selenium.version>1.19.3</testcontainers.selenium.version>
+		<maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
+		<!--<maven-surefire-plugin.version>3.2.5</maven-surefire-plugin.version> -->
+		<!--<maven-compiler-plugin.version>3.12.1</maven-compiler-plugin.version> -->
 
 	</properties>
 
@@ -18,15 +26,14 @@
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-java</artifactId>
-			<!-- <version>4.8.3</version>-->
-			<version>4.16.1</version>
+			<version>${selenium.version}</version>
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.testng/testng -->
 		<dependency>
 			<groupId>org.testng</groupId>
 			<artifactId>testng</artifactId>
-			<version>7.0.0</version>
+			<version>${testng.version}</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -34,7 +41,7 @@
 		<dependency>
 			<groupId>org.aeonbits.owner</groupId>
 			<artifactId>owner-java8</artifactId>
-			<version>1.0.12</version>
+			<version>${owner.version}</version>
 		</dependency>
 
 		<dependency>
@@ -63,18 +70,62 @@
 
 	</dependencies>
 
+	<profiles>
+
+		<profile>
+			<id>smoke</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<properties>
+				<test1>
+					smoke_testng.xml
+				</test1>
+				<xmlFiles>${test1}</xmlFiles>
+			</properties>
+		</profile>
+
+		<profile>
+			<id>regression</id>
+			<activation>
+				<activeByDefault>false</activeByDefault>
+			</activation>
+			<properties>
+				<test1>
+					regression_testng.xml
+				</test1>
+				<xmlFiles>${test1}</xmlFiles>
+			</properties>
+		</profile>
+
+		<profile>
+			<id>grid</id>
+			<activation>
+				<activeByDefault>false</activeByDefault>
+			</activation>
+			<properties>
+				<test1>
+					firefox_grid_testng.xml
+				</test1>
+				<xmlFiles>${test1}</xmlFiles>
+			</properties>
+		</profile>
+
+
+	</profiles>
+
 	<build>
 		<pluginManagement>
 			<plugins>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
-					<version>2.22.2</version>
+					<version>${maven-surefire-plugin.version}</version>
 					<configuration>
 						<forkCount>5</forkCount>
 						<reuseForks>false</reuseForks>
 						<suiteXmlFiles>
-							<suiteXmlFile>testng.xml</suiteXmlFile>
+							${xmlFiles}
 						</suiteXmlFiles>
 					</configuration>
 				</plugin>
