--- a/src/test/resources/general.properties
+++ b/src/test/resources/general.properties
@@ -2,7 +2,7 @@
 target = local
 
 # browser to use : chrome, firefox, edge, safari
-browser = firefox
+browser = chrome
 
 # run test into headless mode
 headless = true
